--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This repo has a sample function to get started with using netlify functions as hasura event triggers. This trigger doesn't do much except for printing a log.",
   "main": "index.js",
   "dependencies": {
-    "netlify-lambda": "^1.0.2"
+    "netlify-lambda": "^1.0.2",
+    "axios": "^0.15.3"
   },
   "devDependencies": {},
   "scripts": {
