--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "This repo has a sample function to get started with using netlify functions as hasura event triggers. This trigger doesn't do much except for printing a log.",
   "main": "index.js",
   "dependencies": {
-    "netlify-lambda": "^1.0.2",
-    "axios": "^0.15.3"
+    "axios": "^0.15.3",
+    "netlify-lambda": "^1.6.3"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "netlify-lambda build functions"
+    "build": "netlify-lambda build functions",
+    "start:lambda": "netlify-lambda serve src/lambda",
+    "build:lambda": "netlify-lambda build src/lambda"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,6 @@
   "bugs": {
     "url": "https://github.com/coco98/hasura-netlify-triggers/issues"
   },
-  "homepage": "https://github.com/coco98/hasura-netlify-triggers#readme"
+  "homepage": "https://github.com/coco98/hasura-netlify-triggers#readme",
+  "keywords": []
 }
